k8/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: hello-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
